--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<button>+ New Profile</button>
-<div class="pop-up">
+<button (click)='this.openPopup()'>+ New Profile</button>
+<div class="pop-up" *ngIf='this.showPopup'>
 <new-profile-form></new-profile-form>
 </div>
