--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -7,4 +7,8 @@ p {
   border: 1px solid black;
   text-align: center;
   width: 300px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translateX(-50%) translateY(-50%);
 }
