--- a/src/app/cards-list/cards-list.component.html
+++ b/src/app/cards-list/cards-list.component.html
@@ -1,4 +1,4 @@
-<div>
-  <div>{{name}}</div>
-  <div>{{desc}}</div>
+<div *ngFor = 'let card of cards'>
+  <div>{{cards.name}}fgh</div>
+  <div>{{cards.desc}}</div>
 </div>
