--- a/src/app/cards-list/cards-list.component.html
+++ b/src/app/cards-list/cards-list.component.html
@@ -1,4 +1,4 @@
 <div *ngFor = 'let card of cards'>
-  <div>{{cards.name}}fgh</div>
-  <div>{{cards.desc}}</div>
+  <div>{{card.name}}fgh</div>
+  <div>{{card.desc}}</div>
 </div>
