--- a/src/app/cards-list/cards-list.component.html
+++ b/src/app/cards-list/cards-list.component.html
@@ -1,4 +1,4 @@
-<div *ngFor = 'let card of cards'>
-  <div>{{card.name}}fgh</div>
-  <div>{{card.desc}}</div>
+<div classs='card' *ngFor = 'let card of cards'>
+  <div>Name: {{card.name}}</div>
+  <div>Desc: {{card.desc}}</div>
 </div>
