--- a/src/app/cards-list/cards-list.component.html
+++ b/src/app/cards-list/cards-list.component.html
@@ -1,4 +1,4 @@
-<div classs='card' *ngFor = 'let card of cards'>
+<div class='card' *ngFor = 'let card of cards'>
   <div>Name: {{card.name}}</div>
   <div>Desc: {{card.desc}}</div>
 </div>
